<resources>
    <string name="app_name">Fly Buy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="store">Store</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Offers">offers</string>
    <string name="Cart">Cart</string>
    <string name="Wishlist">wishlist</string>
    <string name="new_products">New Products</string>
    <string name="Logout">Log Out</string>
    <string name="navhead">My Shop</string>
    <string name="team">#Game_of_Threads</string>
    <string name="my_wishlist_3">My Wishlist(3)</string>
    <string name="wishlist_pri1">Rs.15000</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="wishlist_pri2">Rs.8000</string>
    <string name="wishlist_pri3">Rs.5000</string>
    <string name="add_all_to_cart">Add All To Cart</string>
    <string name="search_clothing">Search your clothing items ...</string>
    <string name="trending_prodcuts">Trending Prodcuts</string>
    <string name="view_all">View All</string>
    <string name="trending_clothing_items">Trending Clothing Items</string>
    <string name="description">description</string>
    <string name="_5_0">5.0</string>
    <string name="discount_20_off">Discount 20% off</string>
    <string name="discover_categories">Discover the Categories</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcom_login">Login</string>
    <string name="welcom_registration">Registration</string>
    <string name="discount_5_off">discount 5% off</string>
    <string name="discount_8_off">discount 8% off</string>
    <string name="recommended">Recommended</string>
    <string name="shirts">Shirts</string>
    <string name="cart_title">My Cart</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="total">Total: Rs.</string>
    <string name="check_out_btn">Check Out</string>
    <string name="any_subject">subject</string>
    <string name="testgmail_com">email</string>
    <string name="sendadd">btnsend</string>
    <string name="ok">TODO</string>
    <string name="message_items">Sent Messages</string>
    <string name="message_item_type" />
    <string name="sendmessage">send</string>
    <string name="textm">message</string>
    <string name="senttext">Sent</string>
    <string name="messagehint">Type Your Message Here...</string>
    <string name="subjecthint">Type Your Subject Here...</string>
    <string name="emailhint">Type Your Email Here...</string>
    <string name="messaghint">Your message..</string>
    <string name="senthint">Your message..</string>
    <string name="sentsubhint">Your Subject..</string>
    <string name="sentemail">Your Email..</string>
    <string name="deletetext">Delete</string>
    <string name="sent_messages1">sent Messages</string>
    <string name="invalid_email">Enter a valid email.</string>
    <string name="invalid_subject">Subject can not be empty.</string>
    <string name="invalid_message">Message can not be empty.</string>
    <string name="empty_email">Email can not be empty.</string>
</resources>

