<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/list"
            android:title="@string/category" />


        <item
            android:id="@+id/nav_Offers"
            android:icon="@drawable/discount"
            android:title="@string/Offers" />
        <item
            android:id="@+id/nav_Cart"
            android:icon="@drawable/cart"
            android:title="@string/Cart" />
        <item
            android:id="@+id/nav_Wishlist"
            android:icon="@drawable/wishlist"
            android:title="@string/Wishlist" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>
</menu>