<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project_mad.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_Offers"
        android:name="com.example.project_mad.offers_Fragment"
        android:label="@string/Offers"
        tools:layout="@layout/fragment_offers_" />
    <fragment
        android:id="@+id/nav_Cart"
        android:name="com.example.project_mad.My_Cart_Fragment"
        android:label="@string/Cart"
        tools:layout="@layout/fragment_my__cart_" />
    <fragment
        android:id="@+id/nav_Wishlist"
        android:name="com.example.project_mad.wishlistFragment"
        android:label="@string/Wishlist"
        tools:layout="@layout/fragment_wishlist" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.project_mad.categoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.project_mad.LogoutFragment"
        android:label="@string/Logout"
        tools:layout="@layout/fragment_logout" />


</navigation>