<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="378dp"
        android:layout_height="339dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/sentnew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/email"
            android:layout_width="362dp"
            android:layout_height="39dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/sentemail"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="362dp"
            android:layout_height="39dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/sentsubhint"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/message"
            android:layout_width="362dp"
            android:layout_height="141dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:text="@string/senthint"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/deletebtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="2dp"
            android:background="@color/sentnew"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/deletebtn"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="41dp"
            android:text="@string/deletetext"
            android:textAllCaps="false"
            android:textColor="@color/browser_actions_bg_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

