<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context=".ui.home.HomeFragment">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:elevation="3dp"
                    android:id="@+id/search_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/ic_baseline_search_24"
                    android:background="@drawable/search_gb"
                    android:padding="13dp"
                    android:hint="@string/search_clothing"
                    android:drawablePadding="5dp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/search_rec"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"

                    />

                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alice"
                        android:text="@string/trending_prodcuts"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/view_all_popular"
                        android:fontFamily="@font/alice"
                        android:layout_weight="1"
                        android:text="@string/view_all"
                        android:gravity="end"
                        android:layout_marginRight="7dp"
                        android:textSize="16sp"
                        android:textColor="#FF8F00"
                        android:textStyle="bold"/>


                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/pop_rec"/>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alice"
                        android:text="@string/discover_categories"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/view_all_explore"
                        android:fontFamily="@font/alice"
                        android:layout_weight="1"
                        android:text="@string/view_all"
                        android:gravity="end"
                        android:layout_marginRight="7dp"
                        android:textSize="16sp"
                        android:textColor="#FF8F00"
                        android:textStyle="bold"/>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/explore_rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alice"
                        android:text="@string/recommended"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/view_all_recommended"
                        android:fontFamily="@font/alice"
                        android:layout_weight="1"
                        android:text="@string/view_all"
                        android:gravity="end"
                        android:layout_marginRight="7dp"
                        android:textSize="16sp"
                        android:textColor="#FF8F00"
                        android:textStyle="bold"/>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommended_rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

            </LinearLayout>

    </ScrollView>
</RelativeLayout>